--- a/nodeBackend/package.json
+++ b/nodeBackend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/App.js"
+    "dev": "nodemon src/App.js"
   },
   "keywords": [],
   "author": "",
